Dashborad Card Order Change / Lenghty text wrap issue / iOS text fill fix

--- a/src/_modal.scss
+++ b/src/_modal.scss
@@ -919,6 +919,7 @@ body.modal-open::-webkit-scrollbar {
     &--label {
       font-size: 14px;
       text-align: left;
+      word-break: break-word;
     }
 
     &--value {
